dependency,class,config changes

--- a/pedidos-api/src/main/resources/application.properties
+++ b/pedidos-api/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=pedidos-api
+
+
+#SPRINGDOC OPENAI
+springdoc.swagger-ui.path=/api-docs.html
+springdoc.api-docs.path=/api-docs
+springdoc.packagesToScan=br.com.mcoder.pedidos.api.controller
