--- a/pedidos-api/src/main/resources/application.properties
+++ b/pedidos-api/src/main/resources/application.properties
@@ -5,3 +5,12 @@ spring.application.name=pedidos-api
 springdoc.swagger-ui.path=/api-docs.html
 springdoc.api-docs.path=/api-docs
 springdoc.packagesToScan=br.com.mcoder.pedidos.api.controller
+
+#RABBITMQ CONFIG
+spring.rabbitmq.host=localhost
+spring.rabbitmq.username=rabbitmq
+spring.rabbitmq.password=rabbitmq
+spring.rabbitmq.port=5672
+
+#RABBITMQ CUSTOM CONFIG
+rabbitmq.exchange.name=pedidos.v1.pedido-criado
