--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,13 @@ services:
       - rabbitmq_data:/var/lib/rabbitmq
       - rabbitmq_log:/var/lib/rabbitmq
 
+  mailhog:
+      image: mailhog/mailhog:latest
+      container_name: mailhog
+      ports:
+        - '1025:1025'
+        - '8025:8025'
+
 volumes:
   rabbitmq_data:
   rabbitmq_log:
