Mailhog service update

--- a/notificacao/src/main/resources/application.properties
+++ b/notificacao/src/main/resources/application.properties
@@ -9,3 +9,11 @@ spring.rabbitmq.port=5672
 #RABBITMQ CUSTOM CONFIG
 rabbitmq.exchange.name=pedidos.v1.pedido-criado
 rabbitmq.queue.name=pedidos.v1.pedido-criado.gerar-notificacao
+
+
+#SPRING MAIL
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
+spring.mail.properties.mail.smtp.starttls.required=false
