tratamendo de excecao - tratando o erro de envio de mensagens infinitas

--- a/notificacao/src/main/resources/application.properties
+++ b/notificacao/src/main/resources/application.properties
@@ -10,6 +10,12 @@ spring.rabbitmq.port=5672
 rabbitmq.exchange.name=pedidos.v1.pedido-criado
 rabbitmq.queue.name=pedidos.v1.pedido-criado.gerar-notificacao
 
+#REENVIO DE MENSAGENS
+spring.rabbitmq.listener.simple.default-requeue-rejected=false
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.max-attempts=4
+spring.rabbitmq.listener.simple.retry.initial-interval=5s
+spring.rabbitmq.listener.simple.retry.multiplier=2
 
 #SPRING MAIL
 spring.mail.host=localhost
