tratamendo de excecao - tratando o erro de envio de mensagens infinitas

--- a/notificacao/src/main/resources/application.properties
+++ b/notificacao/src/main/resources/application.properties
@@ -8,7 +8,11 @@ spring.rabbitmq.port=5672
 
 #RABBITMQ CUSTOM CONFIG
 rabbitmq.exchange.name=pedidos.v1.pedido-criado
+rabbitmq.exchange.dlx.name=pedidos.v1.pedido-criado.dlx
+
+
 rabbitmq.queue.name=pedidos.v1.pedido-criado.gerar-notificacao
+rabbitmq.queue.dlq.name=pedidos.v1.pedido-criado.gerar-notificacao.dlq
 
 #REENVIO DE MENSAGENS
 spring.rabbitmq.listener.simple.default-requeue-rejected=false
